Adding Symfony ORM to deps.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
-        "php": "<=5.3.28"
+        "php": "<=5.3.28",
+        "doctrine/dbal": "~2.4"
     }
 }
